--- a/pom.xml
+++ b/pom.xml
@@ -109,11 +109,6 @@
 			<version>5.1.0</version>
 		</dependency>
 		<dependency>
-			<groupId>net.sourceforge.owlapi</groupId>
-			<artifactId>jfact</artifactId>
-			<version>5.0.1</version>
-		</dependency>
-		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.4</version>
@@ -123,6 +118,11 @@
 			<artifactId>julie-neo4j-plugins-semedico-terms</artifactId>
 			<version>1.5.0-SNAPSHOT</version>
 		</dependency>
+<dependency>
+    <groupId>net.sourceforge.owlapi</groupId>
+    <artifactId>org.semanticweb.hermit</artifactId>
+    <version>1.3.8.500</version>
+</dependency>
 	</dependencies>
 	<properties>
 		<httpcomponents-version>4.5.1</httpcomponents-version>
