--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,11 @@
     <artifactId>org.semanticweb.hermit</artifactId>
     <version>1.3.8.500</version>
 </dependency>
+		<dependency>
+			<groupId>de.julielab</groupId>
+			<artifactId>julielab-java-utilities</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<properties>
 		<httpcomponents-version>4.5.1</httpcomponents-version>
