--- a/pom.xml
+++ b/pom.xml
@@ -122,11 +122,6 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.4</version>
 		</dependency>
-		<dependency>
-			<groupId>de.julielab</groupId>
-			<artifactId>julie-neo4j-plugins-semedico-terms</artifactId>
-			<version>1.5.0-SNAPSHOT</version>
-		</dependency>
 <dependency>
     <groupId>net.sourceforge.owlapi</groupId>
     <artifactId>org.semanticweb.hermit</artifactId>
@@ -135,7 +130,7 @@
 		<dependency>
 			<groupId>de.julielab</groupId>
 			<artifactId>julielab-java-utilities</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.0.0</version>
 		</dependency>
 	</dependencies>
 	<properties>
