--- a/pom.xml
+++ b/pom.xml
@@ -122,11 +122,17 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.4</version>
 		</dependency>
-<dependency>
-    <groupId>net.sourceforge.owlapi</groupId>
-    <artifactId>org.semanticweb.hermit</artifactId>
-    <version>1.3.8.500</version>
-</dependency>
+		<dependency>
+			<groupId>net.sourceforge.owlapi</groupId>
+			<artifactId>org.semanticweb.hermit</artifactId>
+			<version>1.3.8.500</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>2.15.0</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>de.julielab</groupId>
 			<artifactId>julielab-java-utilities</artifactId>
