--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>julielab-bioportal-ontology-tools</artifactId>
-	<version>1.0.4</version>
+	<version>1.1.0</version>
 	<name>BioPortal Ontology Tools</name>
 	<description>This project contains some utilities to process ontologies and related data as retrieved from BioPortal. The tools include the download of ontologies from BioPortal, download of mappings from BioPortal and the extraction of names, synonyms, descriptions and superclasses of ontology concepts from downloaded ontologies.</description>
 	<repositories>
@@ -28,17 +28,8 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.6.1</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.0.2</version>
+				<version>3.2.2</version>
 				<configuration>
 					<!-- exclude logback.xml -->
 					<excludes>
@@ -48,7 +39,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.2</version>
+				<version>3.4.2</version>
 				<configuration>
 					<descriptors>
 						<descriptor>cli.xml</descriptor>
@@ -70,7 +61,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-dependency-plugin</artifactId>
-				<version>2.6</version>
+				<version>3.3.0</version>
 				<executions>
 					<execution>
 						<id>copy dependencies</id>
@@ -110,33 +101,39 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.4</version>
+			<version>2.10</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sourceforge.owlapi</groupId>
 			<artifactId>owlapi-distribution</artifactId>
-			<version>5.1.0</version>
+			<version>5.1.20</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.4</version>
+			<version>3.12.0</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sourceforge.owlapi</groupId>
 			<artifactId>org.semanticweb.hermit</artifactId>
-			<version>1.3.8.500</version>
+			<version>1.4.5.519</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>2.15.0</version>
+			<version>3.12.4</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.julielab</groupId>
 			<artifactId>julielab-java-utilities</artifactId>
-			<version>1.0.0</version>
+			<version>1.4.5</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 	<properties>
@@ -145,6 +142,6 @@
 	<parent>
 		<groupId>de.julielab</groupId>
 		<artifactId>julielab-parent</artifactId>
-		<version>2.0.1</version>
+		<version>2.5.0</version>
 	</parent>
 </project>
